TRUS-1254| Fixed spacing on print pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,16 @@ body:not(.js-enabled) {
 }
 
 // ----------------
+// Trusts Add-to-row
+// this fixes the spacing between 56 character names and the next column for print pages
+// ----------------
+@include govuk-media-query($from: tablet) {
+    .hmrc-add-to-a-list__identifier {
+        padding-right: 15px;
+    }
+}
+
+// ----------------
 // Trusts Add-to-list pattern as a 4th column
 // this ensures the second column moves down correctly underneath on mobile devices
 // ----------------
